# question-manager-user-app

./: CMakeLists.txt  CMakeUserPresets.json  README.md  backup-Cmakelists  conanfile.txt
docs/: model-layout.txt
src/controller/desktop-controller/: json_data.json  main.cpp
src/model/question-api/: json-qm.cpp  json-qm.h  question-manager.cpp  question-manager.h  question.cpp  question.h
src/view/embedded-app/opengtk-version/: main-window.cpp  main-window.h  question-card.cpp  question-card.h  start-gui.cpp
